turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:12: error: ')' expected but ';' found.
			setCouleurBrosse(colors(0);
                                                  ^